Fixed footer text, moved islands on mobile screen size

--- a/static/src/style/footer.styl
+++ b/static/src/style/footer.styl
@@ -43,8 +43,7 @@
   }
 
   .main-text, a {
-    display: flex
-    align-items: center;
+    text-align: center
     color: color-brown  
   
     .arrow {
